js-i2b2/cells/ONT/assets/Ontology.css
#i2b2TreeviewOntNav, #i2b2TreeviewOntSearch, #i2b2OntSearchStatus {
    background: #FFFFFF;
    border: solid 1px rgba(99, 117, 140, 0.28);
    border-top: none;
    overflow: auto;
    border-radius: 0 0 3px 3px;
    flex-direction: column;
    position: absolute;
    bottom: 0;
    top: 3.5em;
    left: 0;
    right: 0;
    height: auto;
}

#i2b2OntSearchStatus {
    display: flex;
    justify-content: center;
    align-items: center;
}


/* TECHNICAL DEBT: Change this when CSS selector :has() is implemented
#i2b2TreeviewOntSearch li:has(.sdxStyleONT-CONCPT.highlight) span.indent {
*/
#i2b2TreeviewOntSearch .search-highlighted {
    font-weight: bold;
}

#i2b2FinderOnt {
    position: absolute;
    top: 0;
    height: 3.1rem;
    border: solid 1px rgba(99, 117, 140, 0.28);
    border-bottom: 0px;
    border-top: none;
    width: 100%;
    padding: 0.3em 1.0em 1.2em 1.3em;
    background: rgba(234, 236, 236, 0.3);
    font-size: 0.98em;
    overflow: clip;
}

#i2b2FinderOnt #searchOptions {
    position: relative;
    align-items: center;
    display: flex;
    height: 100%;
    min-width: 22rem;
}

#i2b2FinderOnt .searchTermMain{
    flex-grow: 1;
    min-width: 6.5rem;
    margin-top: 0.1em;
}

#i2b2FinderOnt #searchTermText{
    flex-grow: 1;
    min-width: 6.5rem;
    margin-top: 0.9em;
    opacity: 0.65;
    border-color: #474849 !important;
    border-width: 0.11em !important;
    padding-bottom: 0;
}

#i2b2FinderOnt #submitTermSearch{
    margin-left: -0.2em;
}

#i2b2FinderOnt #searchFilter{
    padding: 0 0.7rem;
    margin-bottom: -10px;
}

#i2b2FinderOnt #searchFilterText {
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
    vertical-align: middle;
    display: inline-block;
    width: 80px;
}

#i2b2FinderOnt .searchActions .btn {
    padding: 0.05em 0.55em;
    margin-top: 0.7em;
    border-radius: 3px;
}

#i2b2FinderOnt #searchActions button:disabled {
    color: #444;
    background: #ccc;
}

#i2b2FinderOnt .form-control{
    border-radius: 0;
    box-shadow: none;
    background: transparent;
}

button.invert{
    color: #0d6efd;
    background: #FFFFFF;
}

button.invert:hover{
    opacity: 0.7;
}

.hidden{
    display: none;
}

#i2b2FinderOnt .form-select-sm{
    font-size: 0.84em;
}

#i2b2FinderOnt .btn-sm{
    font-size: 0.89em;
}

#i2b2FinderOnt .form-control-sm{
    font-size: 1em;
    padding-left: 0.1em;
}

#i2b2FinderOnt .form-check-input {
    border: 1px solid black;
    margin-top: 2px;
}

#i2b2FinderOnt .form-check-inline {
    margin-top: 5px;
}

#i2b2FinderOnt .navbar-nav{
    border: 1px solid #ced4da;
    border-radius: 5px 5px 5px 5px;
    font-size: 0.9em;
    background-color: #FFFFFF;
}

#i2b2FinderOnt .nav-link{
    color: #212529;
    margin-right: 0.2em;
}

#i2b2FinderOnt .dropdown-menu{
    font-size: 1em;
    position: fixed !important;
}

#i2b2FinderOnt .submenu{
    max-height: 18em;
    overflow-y: auto;
}

#i2b2FinderOnt .search{
    margin-right: 0.5em;
}

@media all and (min-width: 992px) {
    .dropdown-menu li {
        position: relative;
    }
    .nav-item .submenu {
        display: none;
        position: absolute;
        top: -0.2em;
        padding-right: 0.2em;
    }
    .nav-item .submenu-left {
        right: 100%;
        left: auto;
    }
    .dropdown-menu > li:hover {
        background-color: #f1f1f1
    }
}
/* ============ desktop view .end// ============ */

/* ============ small devices ============ */
@media (max-width: 991px) {
    .dropdown-menu .dropdown-menu{
        margin-left:0.7rem;
        margin-right:0.7rem;
        margin-bottom: .5rem;
    }
}
/* ============ small devices .end// ============ */

#i2b2FinderOnt .highlight-menu-item {
    background-color: #f1f1f1;
}

#i2b2FinderOnt .centerText{
    text-align: center;
}

#searchTermError{
    color: red;
    font-size: 0.85em;
    width: 22.4em;
}

#i2b2FinderOnt .searchBtn{
    font-size: 1.4em !important;
    margin-left: 0;
    border-color: #474849 !important;
    border-width: 0.10em !important;
}

#i2b2FinderOnt .searchBtn:hover:enabled{
    background-color: #6c757d;
    border-color: #797a7c !important;
}

#i2b2FinderOnt .searchBtn:enabled{
    opacity: 0.65;
}

#i2b2FinderOnt .clearIcon {
    margin-right: 0;
    margin-left: 0;
    border-color: #797a7c !important;
}

#i2b2FinderOnt .clearIcon:hover {
    border-radius: 3px;
}

#i2b2FinderOnt .invisible {
    visibility: hidden;
}

.tooltip-inner {
    background-color: #fff !important;
    color: #000 !important;
    border: 1px solid #c8cdce;
}

.srTooltip {
    color: #87898a;
}

#i2b2FinderOnt .searchTermMain .input-group{
    border-color: rgba(71, 72, 73, 0.63);
    border-style: solid;
    border-width: 0 0 2px 0 !important;
}

.node-i2b2TreeviewOntNav, .node-i2b2TreeviewOntSearch{
    width: fit-content !important;
}


#ontOptionsModal .ontologyCheckboxOptions{
    vertical-align: -2px;
}

#i2b2TreeviewOntNav .inactiveTerm,
#i2b2TreeviewOntSearch .inactiveTerm {
    color: #c0c0c0;
}

